# gastronomy

./: FeK_troilite.ipynb  README.md  VY1995.py  abundances.py  gas_extinction.ipynb  gas_mixtures.ipynb  index.html  installation.html  make_ismdust_FeK_Rogantini.ipynb  minerals.py  molecules.py  py-modindex.html  pyproject.toml  quickstart.html  search.html  setup.py
docs/: conf.py  installation.rst  quickstart.rst  requirements.txt
docs/_build/html/: .buildinfo  .buildinfo.bak  genindex.html  installation.html  modules.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt
extinction/: minerals.py  molecules.py
extinction/tables/: VY1995_vizier.txt
gastronomy/: VY1995.py  __init__.py  abundances.py  minerals.py  molecules.py
gastronomy/tables/FeK_Rogantini/tabs_CDS/: ReadMe
gastronomy/tables/lit_extinction/: Gavilan2018_Fig3_bot_Black_Curve.csv  Gavilan2018_Fig3_top_Black_Curve.csv  SPARCSwp_Fig1_CO2.csv  SPARCSwp_Fig1_H2O.csv  SPARCSwp_Fig1_NH3.csv  SPARCSwp_Fig1_O2.csv  SPARCSwp_Fig1_O3.csv  SPARCSwp_Fig1_SO2.csv
notebooks/: VY1996_scaling.ipynb  gas_extinction.ipynb  gas_mixtures.ipynb  query_verner_xsect.ipynb
tests/: test_calculations.py  test_exceptions.py  test_inits.py
